--- a/style.css
+++ b/style.css
@@ -1,227 +1,218 @@
-.body {
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC:800,700&subset=cyrillic');
+
+
+body {
     margin: 0;
     padding: 0;
-background: rgb(254,191,1); /* Old browsers */
-background: -moz-linear-gradient(left, rgba(254,191,1,1) 0%, rgba(254,191,1,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left, rgba(254,191,1,1) 0%,rgba(254,191,1,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right, rgba(254,191,1,1) 0%,rgba(254,191,1,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febf01', endColorstr='#febf01',GradientType=1 ); /* IE6-9 */}
+    background-color: #ddddda;
+    font-family: 'Amatic SC', cursive;
+    font-size: 20px;
+    color:#0b212f;
+      height: 100%;
 
-hr {
-border: none; /* Убираем границу для браузера Firefox */
-    color: red; /* Цвет линии для остальных браузеров */
-    background-color: brown; /* Цвет линии для браузера Firefox и Opera */
-    height: 2px; /* Толщина линии */}
-.header 
-{
-background-color: #FFFFE0;
-    text-align: center;
-    height:60px;
-    margin: 0 auto;
+}
+
+
+
+header  {
+    height:50px;
+    background-image:url(img/06.svg);
+    background-size: 50px;
+}
+
+footer  {
+    height: 50px;
+    background-image:url(img/06.svg);
+    background-size: 50px;
+      position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+}
+
+.logo {
+    font-size:50px;
+    text-align:left;
+    
     
 }
 
-.header_nav_bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: none;
-    width: 600px;
-    margin: 0 auto;
-    
+.menu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+        color:#0b212f;
+text-align: center;
+    margin-top:-50px;
 }
 
-.header_nav_bar a {
-    display: flex;
+.menu > li {
+  position: relative;
+  display: inline-block;
+  margin-right: -4px;
+}
+
+
+
+.menu a:hover {
+  color: aliceblue;
+}
+
+.menu .submenu {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+    left: 1px;
+  width: 170px;
+      display: none;
+    background-color:#C0C0C0;
+    border-radius: 20px;
+
+}
+
+.menu > li:hover .submenu {
+  display: block;
+}
+
+a {
     text-decoration: none;
-    color: black;
-    align-self: auto;
-    margin: 0 auto;
+    font-size: 25px;
+    padding-left:10px;
+        padding-right:10px;
+
     
 }
 
-.header_nav_bar a:hover {
-    color: gray;
-    text-decoration: underline;
-}
+a:link {
+    color: #44586a;
 
-.header_nav_bar li {
-    display: flex;
-    width: 196px;
-    border-right: 2px solid black;
-    margin: 0;
-    padding: 0;
-    height: 60px;
-    align-items: center;
-    
+}
+a:visited {
+    color:#0b212f;
+}
+a:hover{
+    color: aliceblue;
 }
 
 
-
-.slides {
-	height: inherit;
-	position: absolute;
-	width: inherit;
+form 
+ {
+     height: 100%;
+    width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+     text-align: center;
 }
 
-.slide1 { background-image: url(img/first.jpg); }
-.slide2 { background-image: url(img/second.jpg); }
-.slide3 { background-image: url(img/third.jpg); }
-.slide4 { background-image: url(img/fourth.jpg); }
-.slide5 { background-image: url(img/fifth.jpg); }
-
-.header_nav_bar li:last-child {
-    border: none;
+.writeus {
+    text-align: center
 }
 
-.content_width {
-    display: block;
-    margin: 0px auto;
-width: 900px;
+img {
+margin-bottom: -5px;
+    border:3px solid #a2b4c3;
+;
+border-radius: 25px 25px}
+
+.button {
+margin-top: 10px;
+  text-align: center;
+
 }
 
-.wrapper {
-	height: 350px;
-	margin: 100px auto 0;
-	position: relative;
-	width: 550px;
+input[type="text"]
+{
+
+height: 20px;
+width: 315px;
 }
 
-.slider {
-    left: 50%;
-    transform: translateX(-50%);
-	background-color: #ddd;
-	height: 800px;
-	overflow: hidden;
-	position: relative;
-	width: 800px;
-	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-	-moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-	-o-box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-	box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+input[type="email"]
+{
+
+height: 20px;
+width: 315px;
 }
 
-.wrapper > input {
-	display: none;
-}
-.wrapper .controls {
-	left: 50%;
-	margin-left: -98px;
-	position: absolute;
+
+
+input[type="submit"] {
+        font-family: 'Amatic SC', cursive;
+        font-size: 20px;
+    display: inline-block;
+  width: 120px;
+  height: 30px;
+  margin: 0 5px;
+    margin-bottom:15px;
+
+  color: #0b212f;
+  background-color: #a2b4c3
+;
+  border: none;
+  border-radius: 15px;
 }
 
-.wrapper label {
-	cursor: pointer;
-	display: inline-block;
-	height: 8px;
-	margin: 25px 12px 0 16px;
-	position: relative;
-	width: 8px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	border-radius: 50%;
+input[type="submit"]:hover{
+        color: aliceblue;
+
 }
 
-.wrapper label:after {
-	border: 2px solid #ddd;
-	content: " ";
-	display: block;
-	height: 12px;
-	left: -4px;
-	position: absolute;
-	top: -4px;
-	width: 12px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	border-radius: 50%;
+
+
+.copyright {
+   text-align: center;
+    font-size:15px;
+     position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 65px;
 }
 
-.wrapper label {
-	cursor: pointer;
-	display: inline-block;
-	height: 8px;
-	margin: 25px 12px 0 16px;
-	position: relative;
-	width: 8px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	border-radius: 50%;
-	-webkit-transition: background ease-in-out .5s;
-	-moz-transition: background ease-in-out .5s;
-	-o-transition: background ease-in-out .5s;
-	transition: background ease-in-out .5s;
+.all  {
+    margin: 0px;
+        padding:0;
 }
 
-.wrapper label:hover, 
-#slide1:checked ~ .controls label:nth-of-type(1),
-#slide2:checked ~ .controls label:nth-of-type(2),
-#slide3:checked ~ .controls label:nth-of-type(3),
-#slide4:checked ~ .controls label:nth-of-type(4),
-#slide5:checked ~ .controls label:nth-of-type(5) {
-	background: #ddd;
-}
-
-.slides {
-	height: inherit;
-	opacity: 0;
-	position: absolute;
-	width: inherit;
-	z-index: 0;
-	-webkit-transform: scale(1.5);
-	-moz-transform: scale(1.5);
-	-o-transform: scale(1.5);
-	transform: scale(1.5);
-	-webkit-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
-	-moz-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
-	-o-transition: transform ease-in-out .5s, opacity ease-in-out .5s;
-	transition: transform ease-in-out .5s, opacity ease-in-out .5s;
-}
-
-#slide1:checked ~ .slider > .slide1,
-#slide2:checked ~ .slider > .slide2,
-#slide3:checked ~ .slider > .slide3,
-#slide4:checked ~ .slider > .slide4,
-#slide5:checked ~ .slider > .slide5 {
-	opacity: 1;
-	z-index: 1;
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-o-transform: scale(1);
-	transform: scale(1);
-}
-
-.order{
-    padding-top: 550px;
+.about_us {
     text-align: center;
-    font-style: italic;
-    color: #8B4513;
+        font-size: 25px;
+    margin-top:70px;
 }
 
-.feedback {
-        text-align: center;
-    font-style: italic;
-    color: #8B4513;
-}
-
-.table_backs {
-margin:auto;
-    
-}
-
-.footer {
-    background-color: #FFFFE0;
+table {
+    margin: auto;
+    margin-top: 70px;
+    font-size: 25px;
     text-align: center;
-    height:60px;
-    margin: 0;
-    padding:0px;
+    line-height: 45px;
+border-spacing: 5px;
 }
-.footer hr {    
-    border: none; /* Убираем границу для браузера Firefox */
-    background-color: brown; /* Цвет линии для браузера Firefox и Opera */
-    height: 2px; /* Толщина линии */
-    
 
+th {
+    font-size:45px;
+    padding-bottom:15px;
+    
+}
+
+.left {
+    text-align: left;
+}
+
+.right {
+    text-align: right;
+}
+
+hr{
+    border: 0;
+height: 1px;
+    width:100px;
+background: #000;
+background-image: -webkit-linear-gradient(left, #fff, #000, #fff);
+background-image: -moz-linear-gradient(left, #fff, #000, #fff);
+background-image: -ms-linear-gradient(left, #fff, #000, #fff);
+background-image: -o-linear-gradient(left, #fff, #000, #fff);
+}
 }
